<resources>
    <string name="app_name">Visiting Card Generator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_visiting_card">Share Visiting Card</string>
    <string name="preview_your_visiting_card">Preview Your Visiting Card</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in">Log In</string>
    <string name="fill_your_details">Fill Your Details</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="company_name">Company Name</string>
    <string name="submit">Submit</string>
</resources>